fixing icon bar on mobile?

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
   grid-column: 4 / 6;
 }
 @media screen and (max-width: 620px) {
-  .s1, .s2, .s3, .s4, .s5, .s6, .s7 {
+  .s1, .s2, .s3, .s4, .s5, .s6, .s7, .icon-bar {
     width: 100%;
   }
 }
